# agent-containment-bench

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
canaries/: tools.py
docs/: analysis.html  blog_post_draft.md  index.md  methodology.md  related-work.md  reproducing.md  threat-model.md
frameworks/: anthropic_native.py  base.py  google_gemini.py  langchain_react.py
harness/: budget.py  escape_detector.py  monitoring.py  runner.py  types.py
isolation/: base.py  docker.py  gvisor_egress.py
notebooks/: analysis.ipynb  analysis_executed.ipynb
results/: _budget_ledger.json  category_breakdown.csv  cell_summary.csv  cost_per_escape.csv  matrix_runs.jsonl  matrix_runs.jsonl.v1  significance_tests.csv
results/gemini_rerun/: _budget_ledger.json  matrix_runs.jsonl
sandbox/: Dockerfile  Dockerfile.dnsmasq
scenarios/: base.py  s00_benign.py  s01_injection_web.py  s02_poisoned_tool.py  s03_filesystem_traversal.py  s04_cred_canary.py  s05_egress.py  s06_persistence.py
scripts/: analyze_results.py  build_analysis_notebook.py  run_matrix.py  run_mvp.py  smoke_test.py
tests/: test_escape_detector.py  test_types.py
tools/: standard.py
