[project]
name = "agent-containment-bench"
version = "0.1.0"
description = "Benchmark for measuring sandbox escape rates of agent frameworks"
authors = [{ name = "G", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "docker>=7.0.0",
    "pydantic>=2.7.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "tabulate>=0.9.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "scipy>=1.13.0",
    "python-dotenv>=1.0.0",
    "tldextract>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
]

[tool.uv]
dev-dependencies = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S"]
ignore = ["S101", "S603", "S607"]  # asserts, subprocess

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
